--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -26,6 +26,7 @@ h6 {
   font-weight: 700;
   letter-spacing: 1px;
 }
+
 p {
   margin: 0 0 25px;
   font-size: 18px;
@@ -39,7 +40,7 @@ p {
   }
 }
 a {
-  color: #42DCA3;
+  color: rgb(66, 164, 220);
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
@@ -47,7 +48,7 @@ a {
 a:hover,
 a:focus {
   text-decoration: none;
-  color: #1d9b6c;
+  color: rgb(202, 235, 255);
 }
 .light {
   font-weight: 400;
@@ -117,24 +118,39 @@ a:focus {
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   }
 }
+
 .intro {
-  display: table;
-  width: 100%;
-  height: auto;
-  padding: 100px 0;
-  text-align: center;
-  color: white;
-  background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
-  background-color: black;
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  background: url(../img/background-intro.jpg) no-repeat bottom center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
 }
+.intro-overlay {
+  background-color: black;
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
+
 .intro .intro-body {
+  width: 100%;
+  height: 100%;
   display: table-cell;
   vertical-align: middle;
+  position: absolute;
+  padding: 10px;
+  margin: auto;
+  text-align: center;
+  top: 25%;
 }
+
 .intro .intro-body .brand-heading {
   font-size: 40px;
 }
@@ -220,17 +236,24 @@ a:focus {
 .content-section {
   padding-top: 100px;
 }
-.download-section {
-  width: 100%;
-  padding: 50px 0;
-  color: white;
+.skills {
+  height: 100vh;
+  width: 100vw;
+  display: block;
+  position: relative;
   background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
-  background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
 }
+
+.skills-overlay {
+  background-color: black;
+  opacity: 0.5;
+  position: absolute;
+}
+
 #map {
   width: 100%;
   height: 200px;
@@ -240,7 +263,7 @@ a:focus {
   .content-section {
     padding-top: 250px;
   }
-  .download-section {
+  .skills-section {
     padding: 100px 0;
   }
   #map {
@@ -258,16 +281,16 @@ a:focus {
   border-radius: 0;
 }
 .btn-default {
-  border: 1px solid #42DCA3;
-  color: #42DCA3;
+  border: 1px solid rgb(66, 164, 220);
+  color: rgb(66, 164, 220);
   background-color: transparent;
 }
 .btn-default:hover,
 .btn-default:focus {
-  border: 1px solid #42DCA3;
+  border: 1px solid rgb(66, 164, 220);
   outline: none;
   color: black;
-  background-color: #42DCA3;
+  background-color: rgb(66, 164, 220);
 }
 ul.banner-social-buttons {
   margin-top: 0;
@@ -312,3 +335,107 @@ img::-moz-selection {
 body {
   webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
 }
+
+/* original color: #42DCA3; */
+
+.skills-section::before {
+  opacity: 0.4;
+  display: block;
+  height: 100vh;
+  width: 100vw;
+  background-size: contain;
+  content: "";
+  background: url(../img/andrewpicture2.jpg) no-repeat center center scroll;
+  background-color: black;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+}
+.container {
+  text-align: center;
+}
+
+.skillIcons {
+  display: inline-block;
+  position: relative;
+  height: 120px;
+  width: 120px;
+  margin: 20px;
+}
+
+.aboutMePic {
+  position: relative;
+  float: left;
+  padding: 0;
+}
+
+.aboutMeSummary {
+  float: right;
+  padding: 0;
+}
+
+.parallax {
+  /* The image used */
+  background-image: url("img/andrewpicture2.jpg");
+
+  /* Set a specific height */
+  height: 500px;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+---- reset ----
+/* body {
+  margin: 0;
+  font: normal 75% Arial, Helvetica, sans-serif;
+}
+canvas {
+  display: block;
+  vertical-align: bottom; */
+} /* ---- particles.js container ---- */
+/* #particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  /* background-color: #b61924;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+} /* ---- stats.js ---- */
+.count-particles {
+  /* background: #000022;
+  position: absolute;
+  top: 48px;
+  left: 0;
+  width: 80px;
+  color: #13e8e9; */ */ */
+  /* font-size: 0.8em;
+  text-align: left;
+  text-indent: 4px;
+  line-height: 14px;
+  padding-bottom: 2px;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: bold;
+}
+.js-count-particles {
+  font-size: 1.1em;
+} */
+/* #stats,
+.count-particles {
+  -webkit-user-select: none;
+  margin-top: 5px;
+  margin-left: 5px;
+}
+#stats {
+  border-radius: 3px 3px 0 0;
+  overflow: hidden;
+}
+.count-particles {
+  border-radius: 0 0 3px 3px;
+} */
